Dec 09 2003  3.1.0  Fixed prism54g override of channel change failure in
                     entering monitor mode.
                    Added more useful error messages to kismet_server
                    Finally fixed kismet_drone and removed debugging info.
                     Should be stable for normal use.
Dec 08 2003  3.1.0  Fixed util.h to include math.h outside of the wext
                     ifdef.
                    Removed mentions of signal quality from the panels client.
                     This only ever got in there because cisco lies and reports
                     it.  Firmwares don't seem to compute quality measurements
                     in rfmon, so this isn't useful to us, and confuses some
                     people.
                    Tweaked util.cc to use rintf for *bsd compatability
                    Removed quality logging from gpsxml, see above for why.
                    Fixed glitches in gpsmap filtering junk points.
                    Dumped wlan-ng channel change commands to null
                    Rolled back to earlier gpsmap earth_distance code since the
                     sped up version doesn't work at the moment.
                    Added prism54g cardsource to work with the prism54.org 
                     drivers (untested)
Dec 07 2003  3.1.0  Tweaked prism2 packet mangling to preserve ICV on packets
                     that don't come in with a FCS set.
                    Restored channel/card reports from server
                    Fixed 802.11b freq-channel translation
                    Switched madwifi combo to priv mode 0 to reduce mode
                     switching overhead when changing channels
                    Added 802.11a frequencies to freq2chan conversion
                    Tweaked hostap monitor mode to be more resilient to 
                     different hostap versions
                    Added pidfile writing to kismet_server